# dmg-as

./: .gitignore  CMakeLists.txt  Makefile  README.md  asm.l  asm.lex  assemble.c  assemble.h  build.sh  conanfile.txt  config.h.in  dict.c  dict.h  hash.h  labels.c  labels.h  lexer.c  lexer.h  main.c  meson.build  parser.h  token.c  token.h
include/: parser.h
parser/: Makefile  dmg.l  dmg.y
src/: dict.c  hash.c  main.c
test/: dict.c  lexer.c  token.c  tokens.s
